--- a/build.gradle
+++ b/build.gradle
@@ -196,6 +196,7 @@ tasks.named('processResources', ProcessResources).configure {
             loader_version_range: loader_version_range,
             mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
             mod_authors: mod_authors, mod_description: mod_description,
+            mod_russian_translation_author: mod_russian_translation_author, mod_ukrainian_translation_author: mod_ukrainian_translation_author,
     ]
     inputs.properties replaceProperties
 
