--- a/gradle.properties
+++ b/gradle.properties
@@ -48,7 +48,7 @@ mod_name=Minepreggo
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=GNU GPLv3
 # The mod version. See https://semver.org/
-mod_version=1.0.0
+mod_version=1.0.3
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -58,5 +58,7 @@ mod_authors=DixMK
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Square bellies and... more square bellies!
 
+mod_russian_translation_author=DanMj
+mod_ukrainian_translation_author=DanMj
 
 # geckolib_version=4.7.4
