--- a/gradle.properties
+++ b/gradle.properties
@@ -60,5 +60,4 @@ mod_description=Square bellies and... more square bellies!
 
 mod_russian_translation_author=DanMj
 mod_ukrainian_translation_author=DanMj
-
-# geckolib_version=4.7.4
+mod_south_korean_translation_author=ahoon12
