--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -29,9 +29,6 @@ displayName="${mod_name}" #mandatory
 displayURL="https://www.deviantart.com/dixmk" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile="logo.png"
-credits="Translations: ${mod_russian_translation_author} (ru) and (uk)" #optional
-# A text field displayed in the mod UI
-#credits="" #optional
 authors="${mod_authors}" #optional
 # Display Test controls the display for your mod in the server connection screen
 # MATCH_VERSION means that your mod will cause a red X if the versions on client and server differ. This is the default behaviour and should be what you choose if you have server and client elements to your mod.
@@ -39,6 +36,8 @@ authors="${mod_authors}" #optional
 # IGNORE_ALL_VERSION means that your mod will not cause a red X if it's present on the client or the server. This is a special case and should only be used if your mod has no server component.
 # NONE means that no display test is set on your mod. You need to do this yourself, see IExtensionPoint.DisplayTest for more information. You can define any scheme you wish with this value.
 # IMPORTANT NOTE: this is NOT an instruction as to which environments (CLIENT or DEDICATED SERVER) your mod loads on. Your mod should load (and maybe do nothing!) whereever it finds itself.
+
+credits="Translations: ${mod_russian_translation_author} (ru_ru and uk_ua) - ${mod_south_korean_translation_author} (ko_kr)" #optional
 
 
 
