--- a/build.gradle
+++ b/build.gradle
@@ -185,7 +185,8 @@ tasks.named('processResources', ProcessResources).configure {
             mod_authors: mod_authors,
 			mod_description: mod_description,
 			mod_south_korean_translation_author: mod_south_korean_translation_author,
-            mod_chinese_simplified_translation_author: mod_chinese_simplified_translation_author
+            mod_chinese_simplified_translation_author: mod_chinese_simplified_translation_author,
+            mod_spanish_translation_author: mod_spanish_translation_author
     ]
     inputs.properties replaceProperties
 
