--- a/gradle.properties
+++ b/gradle.properties
@@ -48,7 +48,7 @@ mod_name=Minepreggo
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=GNU GPLv3
 # The mod version. See https://semver.org/
-mod_version=1.2.2
+mod_version=1.2.3
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -60,3 +60,4 @@ mod_description=Square bellies and... more square bellies!
 
 mod_south_korean_translation_author=ahoon12
 mod_chinese_simplified_translation_author=\u51B0\u51B7\u4E4B\u5FC3cold_hearted
+mod_spanish_translation_author=cooltank
